@@ -16,7 +16,7 @@
 <body>
 
     <header class="encabezado">
-        <img src="../img/logo sabores.jpg" alt="" class="logoSabores">
+        <img src="../img/logo sabores.png" alt="" class="logoSabores">
     
         
         <nav class="navegador">
@@ -59,19 +59,19 @@
                 <h2>DEJANOS TU MENSAJE</h2>
                 <div class="div_consulta">
                     <label for="nombre">NOMBRE O RAZÓN SOCIAL</label>
-                    <input type="text" placeholder="Ingrese su nombre o razón social" id="nombre" name="nombre" value="nombre">
+                    <input type="text" placeholder="Ingrese su nombre o razón social" id="nombre" name="nombre" class="form_box">
                 </div>
                 <div class="div_consulta">
                     <label for="email">EMAIL</label>
-                    <input type="text" placeholder="Ingrese su mail" id="email" name="email">
+                    <input type="text" placeholder="Ingrese su mail" id="email" name="email" class="form_box">
                 </div>
                 <div class="div_consulta">
                     <label for="tel">TELÉFONO</label>
-                    <input type="number" placeholder="Ingrese el teléfono de contacto" id="tel" name="telefono">
+                    <input type="number" placeholder="Ingrese el teléfono de contacto" id="tel" name="telefono" class="form_box">
                 </div>
                 <div class="div_consulta">
                     <label for="asunto">ASUNTO</label>
-                    <input type="text" placeholder="Ingrese su asunto" id="asunto" name="asunto">
+                    <input type="text" placeholder="Ingrese su asunto" id="asunto" name="asunto" class="form_box">
                 </div>
                 <div class="div_consulta">
                     <label for="coment">INGRESE SU CONSULTA</label>
