@@ -17,7 +17,7 @@
 <body>
 
     <header class="encabezado">
-        <img src="../img/logo sabores.jpg" alt="" class="logoSabores">
+        <img src="../img/logo sabores.png" alt="" class="logoSabores">
     
         
         <nav class="navegador">
