@@ -5,6 +5,9 @@
     background-color:  $colorSabores ;
 }
 
+
+
+
 .imgSection_index{
     width: 80%;
     height: 70%;
