@@ -21,6 +21,8 @@ h1{
     grid-area: texto1;
 }
 
+
+
 .parrafo_index{
     
     padding: 3%;
